--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="page">
 	<header class="header page__header">
 		<a href="#" class="header__logo">
-			<img src="./images/header/__logo.svg" class="header__image" alt="Логотип" />
+			<img src="./photos/header-logo.svg" class="header__image" alt="Логотип" />
 		</a>
 		<ul class="header__list">
 			<li class="header__item"><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
@@ -24,7 +24,7 @@
 			<h1 class="lead__title">Путешествия по&nbsp;России</h1>
 			<p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
 			<figure class="lead__figure">
-				<img src="images/lead/lead.jpg" class="lead__image" alt="Человек в поезде" />
+				<img src="photos/lead-polka.jpg" class="lead__image" alt="Человек в поезде" />
 				<figcaption class="lead__caption">ваша полка&nbsp;&mdash; верхняя</figcaption>
 			</figure>
 		</section>
@@ -50,18 +50,18 @@
 			</ul>
 		</section>
 		<section class="photo-grid content__photo-grid">
-			<img src="images/photo-grid/__item-1.jpg" alt="Вид из окна поезда на море" class="photo-grid__item" />
-			<img src="images/photo-grid/__item-2.jpg" alt="Облака" class="photo-grid__item" />
-			<img src="images/photo-grid/__item-3.jpg" alt="Волк на стоге сена" class="photo-grid__item" />
-			<img src="images/photo-grid/__item-4.jpg" alt="Лес в тумане" class="photo-grid__item" />
-			<img src="images/photo-grid/__item-5.jpg" alt="Колесо автомобиля" class="photo-grid__item" />
-			<img src="images/photo-grid/__item-6.jpg" alt="Берег моря" class="photo-grid__item" />
-			<img src="images/photo-grid/__item-7.jpg" alt="Горы" class="photo-grid__item" />
-			<img src="images/photo-grid/__item-8.jpg" alt="Знак пешеходного перехода" class="photo-grid__item" />
-			<img src="images/photo-grid/__item-9.jpg" alt="Горный серпантин" class="photo-grid__item" />
-			<img src="images/photo-grid/__item-10.jpg" alt="Гора" class="photo-grid__item" />
-			<img src="images/photo-grid/__item-11.jpg" alt="Скалы у морря" class="photo-grid__item" />
-			<img src="images/photo-grid/__item-12.jpg" alt="Туман в горах" class="photo-grid__item" />
+			<img src="photos/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item" />
+			<img src="photos/photo-grid-atharva-tulsi.jpg" alt="Горы" class="photo-grid__item" />
+			<img src="photos/photo-grid/tuman.jpg" alt="Собака" class="photo-grid__item" />
+			<img src="photos/photo-grid-sochi.jpg" alt="Туман" class="photo-grid__item" />
+			<img src="photos/photo-grid-arisa.jpg" alt="Озеро" class="photo-grid__item" />
+			<img src="photos/photo-grid-baikal.jpg" alt="Байкал" class="photo-grid__item" />
+			<img src="photos/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__item" />
+			<img src="photos/photo-grid-kondratiev.jpg" alt="Волнорезы" class="photo-grid__item" />
+			<img src="photos/photo-grid-kamchatka-1.jpg" alt="Камчатка" class="photo-grid__item" />
+			<img src="photos/photo-grid-kamchatka-2.jpg" alt="Камчатка" class="photo-grid__item" />
+			<img src="photos/photo-grid-baikal-2.jpg" alt="Байкал" class="photo-grid__item" />
+			<img src="photos/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item" />
 		</section>
 		<section class="places content__places">
 			<article class="place">
@@ -70,7 +70,7 @@
 					<p class="place__url-heading">URL</p>
 					<a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
 				</div>
-				<img src="images/places/__image-1.jpg" alt="Куршская коса" class="place__image" />
+				<img src="photos/place-kosa.jpg" alt="Куршская коса" class="place__image" />
 				<div class="place__paragraphs">
 					<p class="place__paragraph">
 						Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта
@@ -93,7 +93,7 @@
 					<a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank"
 						class="place__link">National Geographic</a>
 				</div>
-				<img src="images/places/__image-2.jpg" alt="Кольский" class="place__image" />
+				<img src="photos/place-kolsky.jpg" alt="Кольский" class="place__image" />
 				<div class="place__paragraphs">
 					<p class="place__paragraph">
 						Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от которой на&nbsp;юг
@@ -117,7 +117,7 @@
 					<a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank"
 						class="place__link">Facebook</a>
 				</div>
-				<img src="images/places/__image-3.jpg" alt="Алтай" class="place__image" />
+				<img src="photos/place-altai.jpg" alt="Алтай" class="place__image" />
 				<div class="place__paragraphs">
 					<p class="place__paragraph">
 						Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России. В&nbsp;первую очередь из-за гор: если
@@ -139,7 +139,7 @@
 					<p class="place__url-heading">URL</p>
 					<a href="https://vk.com/baikalmile" target="_blank" class="place__link">https://vk.com/baikalmile</a>
 				</div>
-				<img src="images/places/__image-4.jpg" alt="Зимний Байкал" class="place__image" />
+				<img src="photos/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image" />
 				<div class="place__paragraphs">
 					<p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также знают,
 						что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в России.</p>
@@ -157,7 +157,7 @@
 					<p class="place__url-heading">URL</p>
 					<a href="http://vodlozero.ru" target="_blank" class="place__link">http://vodlozero.ru/</a>
 				</div>
-				<img src="images/places/__image-5.jpg" alt="Карелия" class="place__image" />
+				<img src="photos/place-karelia.jpg" alt="Карелия" class="place__image" />
 				<p class="place__paragraph">
 					Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница
 					не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса
